# quant-strategy

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  start.sh
app/: main.py
app/backtest/: api.py  bt_engine.py  engine.py
app/backtest/strategies/: golden_cross.py  macd_divergence.py  rsi_macd.py  turtle_trade.py
app/common/: dashboard.py  schemas.py
app/config/: settings.py
app/database/: __init__.py  models.py  repository.py
app/indicator/: api.py  calculator.py
app/market/: api.py  data_loader.py  service.py
app/market/providers/: akshare_provider.py  base.py  loader.py  yahoo_provider.py
app/report/: generator.py
app/strategy/: api.py  backtest.py  base.py  strategies.py
app/strategy/strategies/: bollinger.py  double_bottom.py  ma_cross.py  macd.py  rsi.py  turtle.py  vwap.py  z_score.py
app/utils/: tools.py
storage/: stock_quant.db
tests/: test_app_import.py  test_data_source.py  test_market_provider_loader.py  test_response_camelize.py  test_yf.py
